2002-01-30  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v1.6.8-cvs

        * CachingProvider was iterating through the wrong collection.
        This might fix the NullPointerExceptions that have been coming
        around lately.

2002-01-28  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v1.6.7-cvs

        * Added new RPC API: getPageInfo( string page ), and getPageInfo(
        string page, int version ).  Also, the struct returned by
        getRecentChanges() and getPageInfo() got enhanced.

        * Wiki.jsp now shows the info on old versions properly: before it
        would show data pertaining to the current version, even if viewing
        an older version.

        * WikiPageProvider interface reworked slightly: Both getPageInfo()
        and getPageText() now need the version parameter.  Versionless
        methods are no longer supported (use LATEST_VERSION as a special
        tag for version to get the latest.)  I did this to simplify the
        API so that there would be less methods to implement.

        * RCSFileProvider can now fetch information on old pages
        correctly. 

2002-01-27  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * v1.6.6-cvs.

        * Added XML-RPC call system.  See the com.ecyrd.jspwiki.xmlrpc
        package for more information.

        * Error output from RCS commands is now visible in the log.

        * Diff.jsp now has links to the actual page and the Page Info.

        * Some more refactoring inside WikiEngine: removed redundant
        code.

        * Refactored TranslatorReader to be more modular.  Provided hooks
        into the internals, so that links can now be read on-the-fly.

        * WikiEngine.getInstance() is now protected against multiple
        concurrent invocations.  This should help with startup issues.

2002-01-25  Janne Jalkanen  <Janne.Jalkanen@ecyrd.com>

        * CachingProvider now provides some protection against